fix: no daos in services that do not belong